; ModuleID = '/home/carl/AnghaBench/tig/test/tools/extr_test-graph.c_print_commit.c'
source_filename = "/home/carl/AnghaBench/tig/test/tools/extr_test-graph.c_print_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph = type { i32 (%struct.graph*, i32*, i32, i32*)* }
%struct.commit = type { i32 }

@print_symbol = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c" %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.graph*, %struct.commit*, i8*)* @print_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_commit(%struct.graph* %0, %struct.commit* %1, i8* %2) #0 {
  %4 = alloca %struct.graph*, align 8
  %5 = alloca %struct.commit*, align 8
  %6 = alloca i8*, align 8
  store %struct.graph* %0, %struct.graph** %4, align 8
  store %struct.commit* %1, %struct.commit** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.graph*, %struct.graph** %4, align 8
  %8 = getelementptr inbounds %struct.graph, %struct.graph* %7, i32 0, i32 0
  %9 = load i32 (%struct.graph*, i32*, i32, i32*)*, i32 (%struct.graph*, i32*, i32, i32*)** %8, align 8
  %10 = load %struct.graph*, %struct.graph** %4, align 8
  %11 = load %struct.commit*, %struct.commit** %5, align 8
  %12 = getelementptr inbounds %struct.commit, %struct.commit* %11, i32 0, i32 0
  %13 = load i32, i32* @print_symbol, align 4
  %14 = call i32 %9(%struct.graph* %10, i32* %12, i32 %13, i32* null)
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %15)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
